# flame

./: .gitignore  Cargo.toml  README.md  SETUP.md  flame.control
doc/archive/: Cargo.toml
src/: fast_embeddings.rs  hf_embeddings.rs  lib.rs  t5_embeddings.rs
